--- a/frontend/src/app/@theme/styles/cold.theme.scss
+++ b/frontend/src/app/@theme/styles/cold.theme.scss
@@ -71,4 +71,4 @@ $nb-themes: nb-register-theme(( // Palette colori principali
       //color-primary-800: #ff0080,
       //color-primary-900: #386483,
 
-    ), custom2, default);
+    ), cold, default);
