--- a/frontend/src/app/@theme/styles/mold.theme.scss
+++ b/frontend/src/app/@theme/styles/mold.theme.scss
@@ -40,4 +40,4 @@ $nb-themes: nb-register-theme(( // Palette colori principali
       slide-out-background: linear-gradient(270deg, #222b45 0%, #151a30 100%),
       slide-out-shadow-color: 0 4px 14px 0 #8f9bb3,
       slide-out-shadow-color-rtl: 0 4px 14px 0 #8f9bb3,*/
-    ), custom, default);
+    ), mold, default);
